# loca

./: Cargo.toml  README.md
src/: main.rs
src/templates/: report.html
