[package]
name = "loca"
version = "0.1.0"
edition = "2021"

[dependencies]
tokei = "~12.1"
comfy-table = "~7.1"
structopt = "~0.3"
number_prefix = "~0.4"
colored = "~3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "~1.3"
chrono = "~0.4"
handlebars = "~6.3"
indicatif = "~0.17"
sysinfo = "~0.33"
